language/move-prover/tests/sources/functional/invariants.exp
Move prover returns: exiting with boogie verification errors
error:  This assertion might not hold.

    ┌── tests/sources/functional/invariants.move:16:9 ───
    │
 16 │         invariant greater_one(x);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/invariants.move:42:5: invalid_R_pack (entry)

error:  This assertion might not hold.

    ┌── tests/sources/functional/invariants.move:16:9 ───
    │
 16 │         invariant greater_one(x);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/invariants.move:112:5: lifetime_invalid_R (entry)
    =     at tests/sources/functional/invariants.move:113:13: lifetime_invalid_R
    =     at tests/sources/functional/invariants.move:114:21: lifetime_invalid_R
    =         r = <redacted>,
    =         r_ref = <redacted>
    =     at tests/sources/functional/invariants.move:115:26: lifetime_invalid_R
    =         x_ref = <redacted>
    =     at tests/sources/functional/invariants.move:116:18: lifetime_invalid_R
    =         r_ref = <redacted>,
    =         x_ref = <redacted>

error:  This assertion might not hold.

     ┌── tests/sources/functional/invariants.move:150:9 ───
     │
 150 │         invariant y > 1;
     │         ^^^^^^^^^^^^^^^^
     │
     =     at tests/sources/functional/invariants.move:153:5: lifetime_invalid_S_branching (entry)
     =     at tests/sources/functional/invariants.move:154:11: lifetime_invalid_S_branching
     =         cond = <redacted>
     =     at tests/sources/functional/invariants.move:155:21: lifetime_invalid_S_branching
     =         a = <redacted>,
     =         b = <redacted>
     =     at tests/sources/functional/invariants.move:156:19: lifetime_invalid_S_branching
     =         a_ref = <redacted>
     =     at tests/sources/functional/invariants.move:157:19: lifetime_invalid_S_branching
     =         b_ref = <redacted>
     =     at tests/sources/functional/invariants.move:158:23: lifetime_invalid_S_branching
     =         $t5 = <redacted>,
     =         x_ref = <redacted>
     =     at tests/sources/functional/invariants.move:160:11: lifetime_invalid_S_branching
     =     at tests/sources/functional/invariants.move:163:11: lifetime_invalid_S_branching
     =         a_ref = <redacted>,
     =         b_ref = <redacted>,
     =         $t5 = <redacted>,
     =         x_ref = <redacted>
